--- a/src/style/buttons.scss
+++ b/src/style/buttons.scss
@@ -25,6 +25,10 @@
     &-main {
         background-color: $darkRed;
     }
+    &-long {
+        min-width: 170px;
+        background-color: $darkRed;
+    }
 }
   
   
