--- a/src/components/characters/characters.scss
+++ b/src/components/characters/characters.scss
@@ -1,5 +1,16 @@
 @import '../../style/variables.scss';
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
+    .btn {
+        margin-top: 45px;
+    }
+}
+
 .characters {
     display: grid;
     grid-template-columns: repeat(3, 208px);
@@ -7,9 +18,6 @@
     gap: 25px;
 
     &__card {
-        //min-height: 318px;
-        //width: 208px;
-    
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -20,6 +28,7 @@
         p {
             font-size: 22px;
             line-height: 25px;
+            font-weight: 700;
             padding: 15px;
             background-color: $dark;
             color: #fff;
@@ -29,9 +38,5 @@
         img {
             width: 100%;
         }
-    }
-
-       
-    
-    
+    }    
 }
