--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,10 +1,18 @@
 .app {
+   position: relative;
    max-width: 1100px;
    margin: 50px auto;
+   &__bg {
+      position: absolute;
+      bottom: -40px;
+      right: -205px;
+      z-index: -1;
+   }
+   &__main {
+      display: flex;
+      justify-content: start;
+      margin-top: 50px;
+   }
 }
 
-.main-section {
-   display: flex;
-   justify-content: start;
-   margin-top: 50px;
-}
+
