get data serever

--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -3,6 +3,10 @@
 .random-char {
     margin-top: 50px;
     display: flex;
+    &__img-wrapper {
+        width: 180px;
+        height: 180px;
+    }
     &__block {
         display: flex;
         padding: 35px;
@@ -19,6 +23,7 @@
         width: 50%;
     }
     &__descr {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
