--- a/src/components/characters/characters.scss
+++ b/src/components/characters/characters.scss
@@ -20,7 +20,7 @@
     &__card {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-between;
         &-active {
             box-shadow: 0px 5px 20px $darkRed;
             transform: translateY(-10px);
@@ -35,8 +35,14 @@
             height: 118px;
         }
 
-        img {
+        &__img {
             width: 100%;
+            object-fit: cover;
+            height: 200px;  
+            &-not {
+                object-fit: fill;
+            }
         }
-    }    
+    }
+      
 }
