--- a/src/style/buttons.scss
+++ b/src/style/buttons.scss
@@ -10,6 +10,7 @@
     border: none;
     text-transform: uppercase;
     color: #fff;
+    text-align: center;
     cursor: pointer;
     transition: all .3s;
     clip-path: polygon(
