--- a/src/components/characterInfo/characterInfo.scss
+++ b/src/components/characterInfo/characterInfo.scss
@@ -1,18 +1,25 @@
 .char {
+    position: relative;
     margin-left: 25px;
     width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, .25);
     padding: 25px;
     height: max-content;
+    z-index: 5;
     &__control {
         display: flex;
     }
     &__photo {
         width: 150px;
         display: block;
+        object-fit: contain;
     }
     &__btns {
-        margin-left: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        margin-left: 20px;
         p {
             font-size: 22px;
             line-height: 25px;
