load characters by click

--- a/src/style/buttons.scss
+++ b/src/style/buttons.scss
@@ -34,6 +34,9 @@
         min-width: 170px;
         background-color: $darkRed;
     }
+    &:disabled {
+        filter: grayscale(50%)
+    }
 }
   
   
