--- a/src/components/characters/characters.scss
+++ b/src/components/characters/characters.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: center;
-
+    margin-right: 25px;
     .btn {
         margin-top: 45px;
     }
