--- a/src/components/comics/comics.scss
+++ b/src/components/comics/comics.scss
@@ -1,3 +1,4 @@
+@import '../../style/variables.scss';
 
 .comics {
     margin-top: 50px;
@@ -42,6 +43,13 @@
                 width: 100%;
                 min-height: 350px;
                 cursor: pointer;
+            }
+            &-active {
+                box-shadow: 0px 5px 20px $darkRed;
+                transform: translateY(-10px);
+            }
+            &:hover {
+                transform: translateY(-10px);
             }
         }
 
