add click in random char on comics

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -2,11 +2,13 @@
    position: relative;
    max-width: 1100px;
    margin: 50px auto;
+
    &__bg {
       position: absolute;
+      width: 40%;
       bottom: -45px;
       right: -140px;
-      z-index: 0;
+      z-index: -1;
    }
    &__main {
       display: flex;
