--- a/src/components/characterInfo/characterInfo.scss
+++ b/src/components/characterInfo/characterInfo.scss
@@ -5,6 +5,8 @@
     padding: 25px;
     height: max-content;
     z-index: 5;
+    background-color: rgba(250, 250, 250, .96);
+
     &__control {
         display: flex;
     }
@@ -12,6 +14,19 @@
         width: 150px;
         display: block;
         object-fit: contain;
+    }
+    &__btn {
+        margin-top: 15px;
+        border: none;
+        padding: 5px;
+        background: none;
+        transition: all .5s;
+        border-radius: 80%;
+        cursor: pointer;
+        &:hover {
+            background:rgba(0, 0, 0, .25)
+        }
+
     }
     &__btns {
         display: flex;
@@ -41,15 +56,22 @@
     }
 
     &__comics {
+
         margin-top: 10px;
-        ul {
+        &__list {
             margin-top: 10px;
-            li {
+            &__item {
                 width: 100%;
                 padding: 4px 10px;
                 font-size: 14px;
-                box-shadow: 0 4px 4px rgba(0, 0, 0, .25)
+                box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
+                cursor: pointer;
+                &:hover {
+                    transform: translateX(5px);
+                }
             }
+            
+            
         }
     }
 
