--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -7,6 +7,7 @@
     &__img-wrapper {
         width: 180px;
         height: 180px;
+        cursor: pointer;
     }
     &__block {
         display: flex;
@@ -32,6 +33,7 @@
         h2 {
             font-size: 22px;
             font-weight: 700;
+            cursor: pointer;    
         }
         p {
             margin-top: 10px;
