add form fro searching char, add charList, add Char page

--- a/src/components/characterInfo/characterInfo.scss
+++ b/src/components/characterInfo/characterInfo.scss
@@ -1,5 +1,10 @@
+.char-info {
+    width: 100%;
+}
+
 .char {
     position: relative;
+    margin-bottom: 20px;
     width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, .25);
     padding: 25px;
