--- a/src/components/pages/singleComic/singleComic.scss
+++ b/src/components/pages/singleComic/singleComic.scss
@@ -40,3 +40,49 @@
         }
     }
 }
+
+.characters {
+
+    &__list {
+        margin: 0 auto;
+
+        &__item {
+            font-size: 22px;
+            font-weight: 700;
+            line-height: 25.78px;
+            margin: 10px 0;
+            padding: 5px 10px;
+            box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.25);
+            
+            &:hover {
+                cursor: pointer;
+                transform: translateX(-10px);
+                transition: all .3s;
+            }
+        }
+
+    }
+}
+
+.char {
+    display: flex;
+    justify-content: space-between;
+
+    &__info {
+        margin-left: 50px;
+        font-size: 18px;
+        font-weight: 400;
+        text-align: left;
+        &__name {
+            font-size: 22px;
+            font-weight: 700;
+        }
+        &__descr {
+            margin-top: 25px;
+        }
+    }
+
+    &__img {
+        width: 290px;
+    }
+}
