--- a/src/components/pages/singleComic/singleComic.scss
+++ b/src/components/pages/singleComic/singleComic.scss
@@ -45,6 +45,7 @@
 
     &__list {
         margin: 0 auto;
+        width: 100%;
 
         &__item {
             font-size: 22px;
@@ -66,7 +67,7 @@
 
 .char {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
 
     &__info {
         margin-left: 50px;
