--- a/src/components/characterInfo/characterInfo.scss
+++ b/src/components/characterInfo/characterInfo.scss
@@ -10,7 +10,7 @@
     padding: 25px;
     height: max-content;
     z-index: 5;
-    background-color: rgba(250, 250, 250, .96);
+    background-color: rgb(250, 250, 250);
 
     &__control {
         display: flex;
