--- a/src/components/characters/characters.scss
+++ b/src/components/characters/characters.scss
@@ -6,6 +6,7 @@
     justify-content: start;
     align-items: center;
     margin-right: 25px;
+    min-width: 674px;
     .btn {
         margin-top: 45px;
     }
